Sat Jul 08 14:40:00 BST 2000 Olly Betts

	* omega: matching terms now listed in query order

	* omega: added "11-20 of at least 407 documents matching query" stuff;
	  added $add{...} operator to facilitate this

Sat Jul 08 12:46:00 BST 2000 Olly Betts

	* omega: cured occasional bogus term being parsed from query

Sat Jul 08 12:14:00 BST 2000 Olly Betts

	* omindex: Put title in index; limit sample to around 300 characters;
	  translate common entities e.g. "&lt;" -> "<"; lowercase and stem
	  terms

	* omega: $topdoc changed to return "0" instead of "" for first page

Fri Jul 07 11:54:00 BST 2000 Olly Betts

	* omega: added omindex - simple web site indexer

	* omega: fixed up various problems with default page template

	* omega: Fixed up problem with query generating no matches

Thu Jul 06 14:46:00 BST 2000 Olly Betts

	* omega: more work on macro language

Thu Jul 06 14:46:00 BST 2000 Olly Betts

	* omega: fixed up problems with lex stuff

Thu Jul 06 12:17:00 BST 2000 Olly Betts

	* Renamed ferretfx to omega

Thu Jul 06 11:33:00 BST 2000 Olly Betts

	* ferretfx: replacement combined parser for page and hit templates

Tue Jul 04 12:41:00 BST 2000 Olly Betts

	* ferretfx: can now actually search OM databases

Mon Jul 03 13:19:00 BST 2000 Olly Betts

	* ferretfx: cleaned out EuroFerret specific stuff

Fri Jun 23 13:58:00 BST 2000 Olly Betts

	* ferretfx: more work

Fri Jun 23 11:40:00 BST 2000 Olly Betts

	* ferretfx: resolved many FIXMEs; tidied up code some more.

Thu Jun 22 18:51:00 BST 2000 Olly Betts

	* ferretfx: since most people don't have ferret databases lying
	  around, this example is at best an esoteic curio.  So I've begun
	  reworking it into a general purpose cgi frontend to om databases.

Wed Jun 21 18:06:00 BST 2000 Olly Betts

	* ferretfx: should now display matching terms correctly

Tue Jun 20 14:29:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Don't need omassert.h either.  Fixed ECHO to use abort() rather
	  than Assert(0)
