@@ -1,3 +1,7 @@
+Sat Jul 08 15:46:00 BST 2000 Olly Betts
+
+	* omega: page links working (needs cleaning up still)
+
 Sat Jul 08 14:40:00 BST 2000 Olly Betts
 
 	* omega: matching terms now listed in query order
